--- a/themes/pico/layouts/partials/widgets/hero.html
+++ b/themes/pico/layouts/partials/widgets/hero.html
@@ -6,14 +6,14 @@
 		</div>
 		<div class="mx-auto mt-8 mb-8 md:mb-0 flex justify-center md:justify-start">
 			{{ range .Params.btn }}
-			{{ $class := "border border-green-400 hover:text-white" }}
+			{{ $class := "border border-red-400 hover:text-white" }}
 			{{ if .primary }}
-			{{ $class = "bg-green-400 text-white"}}
+			{{ $class = "bg-red-400 text-white"}}
 			{{ end }}
 
 			<a href="{{ .url | relLangURL }}" class="no-underline">
 				<div
-					class="px-4 py-2 mx-2 rounded-sm text-center hover:bg-green-500 active:bg-green-600 transition duration-300 ease-in-out {{ $class }}">
+					class="px-4 py-2 mx-2 rounded-sm text-center hover:bg-red-500 active:bg-red-600 transition duration-300 ease-in-out {{ $class }}">
 					{{ .label }}
 				</div>
 			</a>
